# openbb-empty

./: .gitignore  README.md  ruff.toml
.github/workflows/: general-linting.yml
openbb_empty/: .pre-commit-config.yaml  README.md  dev_install.py  pyproject.toml  setup.py
openbb_empty/extensions/empty_obbject_extension/: README.md  pyproject.toml
openbb_empty/extensions/empty_obbject_extension/openbb_empty_obbject/: __init__.py
openbb_empty/extensions/empty_provider_extension/: __init__.py  pyproject.toml
openbb_empty/extensions/empty_provider_extension/openbb_empty_provider/: __init__.py
openbb_empty/extensions/empty_provider_extension/openbb_empty_provider/models/: empty_model.py
openbb_empty/extensions/empty_provider_extension/tests/: __init__.py  test_empty_fetchers.py
openbb_empty/extensions/empty_router_extension/: pyproject.toml
openbb_empty/extensions/empty_router_extension/integration/: test_empty_api.py  test_empty_python.py
openbb_empty/extensions/empty_router_extension/openbb_empty_router/: empty_router.py
openbb_empty/openbb/: __init__.py  main.py  utils.py
openbb_empty/openbb/assets/: reference.json
openbb_empty/openbb/package/: __extensions__.py  empty.py
openbb_empty/tests/: conftest.py
