[tool.poetry]
name = "openbb-empty"
version = "1.0.0"
description = "An Empty OpenBB Container For Local Development"
authors = ["OpenBB Team <hello@openbb.co>"]
readme = "README.md"
packages = [{ include = "openbb" }]

[tool.poetry.dependencies]
python = "^3.10,<3.13"
notebook = "^7.2"
nbclassic = "^1.1"
jedi-language-server = "^0.41" 
openbb-core = "^1.3.0"
openbb-devtools = "^1.3.0"
openbb-charting = { version = "^2.2.0", optional = true }
openbb-empty-obbject = { url = "https://github.com/deeleeramone/openbb-empty/raw/main/openbb_empty/extensions/empty_obbject_extension/dist/openbb_empty_obbject-0.0.1.tar.gz", optional = true }
openbb-empty-provider = { url = "https://github.com/deeleeramone/openbb-empty/raw/main/openbb_empty/extensions/empty_provider_extension/dist/openbb_empty_provider-0.0.1.tar.gz", optional = true }
openbb-empty-router = { url = "https://github.com/deeleeramone/openbb-empty/raw/main/openbb_empty/extensions/empty_router_extension/dist/openbb_empty_router-0.0.1.tar.gz", optional = true }

[tool.poetry.extras]
charting = ["openbb-charting"]
obbject = ["openbb-empty-obbject"]
provider = ["openbb-empty-provider"]
router = ["openbb-empty-router"]

all = [
    "openbb-charting",
    "openbb-empty-obbject",
    "openbb-empty-provider",
    "openbb-empty-router"
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
