[tool.poetry]
name = "openbb-empty"
version = "1.0.0"
description = "An Empty OpenBB Container For Local Development"
authors = ["OpenBB Team <hello@openbb.co>"]
readme = "README.md"
packages = [{ include = "openbb" }]

scripts = { "openbb-api" = "openbb.main:launch_api" }

[tool.poetry.dependencies]
python = "^3.10,<3.13"
notebook = "^7.2"
nbclassic = "^1.1"
jedi-language-server = "^0.41" 
openbb-core = "^1.3.0"
openbb-devtools = "^1.3.0"
openbb-charting = { version = "^2.2.0", optional = true }
pywry = { version = "^0.6.2", optional = true }

[tool.poetry.extras]
charting = ["openbb-charting"]
pywry = ["pywry"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
