[tool.poetry]
name = "openbb-empty"
version = "1.0.1"
description = "An Empty OpenBB Configuration."
authors = ["deeleeramone <hello@openbb.co>"]
readme = "README.md"
packages = [{ include = "openbb" }]

scripts = { "openbb-api" = "openbb.main:launch_api" }

[tool.poetry.dependencies]
python = "^3.10,<3.13"
notebook = { version = "^7.2", optional = true }
nbclassic = { version = "^1.1", optional = true }
jedi-language-server = { version = "^0.41", optional = true }
openbb-core = "^1.3.0"
openbb-charting = { version = "^2.2.0", optional = true }
pywry = { version = "^0.6.2", optional = true }

[tool.poetry.group.dev.dependencies]
openbb-devtools = "^1.3"

[tool.poetry.extras]
charting = ["openbb-charting"]
pywry = ["pywry"]
notebook = ["notebook", "nbclassic", "jedi-language-server"]
all = ["openbb-charting", "pywry", "notebook", "nbclassic", "jedi-language-server"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
